<resources>
    <string name="app_name">PiBA</string>
    <string name="home_page_caption">Hello</string>
    <string name="add_income_caption">Adding income</string>
    <string name="income_str">Income</string>
    <string name="consumption_str">Consumption</string>
    <string name="add_str">Add</string>
    <string name="cancel_str">Cancel</string>
    <string name="pattern_str">Pattern</string>
    <string name="sum_str">Amount</string>
    <string name="sum_saving_str">Amount of savings</string>
    <string name="category_history_caption">Name of category</string>
    <string name="total_str">Saved</string>
    <string name="replenish_str">Refill</string>
    <string name="subtract_str">Subtract</string>
    <string name="history_str">History</string>
    <string name="default_num">0</string>
    <string name="category_add_caption">Creating a category</string>
    <string name="category_add_button_str">+Create category</string>
    <string name="category_name">Title</string>
    <string name="nominal">Nominal</string>
    <string name="start_sum">Initial amount</string>
    <string name="category_color">Color</string>
    <string name="pattern_add_caption">Creating a template</string>
    <string name="financial_reserve">Financial reserve</string>
    <string name="category">Category</string>
    <string name="percent">%</string>
    <string name="hundred">100</string>
    <string name="create">Create</string>
    <string name="confirm">ОК</string>
    <string name="error_no_category">You need to create categories on the main page</string>
    <string name="error_field_no_num">Enter a number in the nomination field</string>
    <string name="error_field_no_int">Enter an integer</string>
    <string name="error_sum_percentages">The amount of interest does not equal 100</string>
    <string name="settings">Settings</string>
    <string name="back_str">Back</string>
    <string name="wipe_data">Wipe all data</string>
    <string name="data_wiped_message">Data wiped</string>


</resources>