<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        tools:context=".presentation.PatternAddActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_btn2"
            android:layout_width="221dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/green_button"
            android:onClick="income_btn_onClick"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/back_btn2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_btn2"
            android:layout_width="221dp"
            android:layout_height="40dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/gray_rounded"
            android:text="@string/cancel_str"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/pattern_add_caption"
            android:textColor="#221F1F"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/replenish_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="291dp"
            android:text="@string/category_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/name_enter_box"
            android:layout_width="326dp"
            android:layout_height="41dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="43dp"
            android:background="@drawable/light_gray_rounded"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/replenish_text" />

        <LinearLayout
            android:id="@+id/linear_master"
            android:layout_width="332dp"
            android:layout_height="19dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal"
            android:background="@drawable/linear_master_on_paa"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_enter_box">
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/add_btn2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ScrollView
                android:id="@+id/scrollView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout
                        android:id="@+id/tableLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="10*,23*,30*">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/button_point"
                                android:layout_width="17dp"
                                android:layout_height="17dp"
                                android:layout_marginTop="0dp"
                                android:background="@drawable/category_point"
                                android:backgroundTint="@color/light_purple"
                                android:textColor="@color/light_purple" />

                            <EditText
                                android:id="@+id/name_cat_enter_box2"
                                android:layout_width="220dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="11dp"
                                android:background="@drawable/light_gray_rounded"
                                android:inputType="none"
                                android:paddingStart="15dp"
                                android:paddingEnd="15dp"
                                android:text="@string/financial_reserve"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/replenish_text" />

                            <TextView
                                android:id="@+id/financial_reserve_cat_enter_box2"
                                android:layout_width="64dp"
                                android:layout_height="40dp"
                                android:layout_marginStart="18dp"
                                android:paddingStart="15dp"
                                android:paddingEnd="15dp"
                                android:text="@string/hundred"
                                android:textSize="20sp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/replenish_text" />
                        </TableRow>
                    </TableLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/add_cat"
                        android:layout_width="221dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/gray_rounded"
                        android:backgroundTint="@color/light_gray"
                        android:text="@string/add_str"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:text="@string/percent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_master" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="100dp"
            android:text="@string/category"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_master" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
